# data-prep-and-analysis

./: .gitignore  README.md
lab-2/: README.md  part1_vhi.ipynb  part2_power.ipynb  requirements.txt
lab-3/: README.md  lab3.ipynb  requirements.txt
lab-4/: README.md  harmonic_visualization.ipynb  requirements.txt
lab-5/: .gitignore  README.md  app.py  requirements.txt
lab-6/: CMakeLists.txt  README.md  preinstall.sh  run.sh
lab-6/include/: FrameProcessor.hpp  KeyProcessor.hpp
lab-6/src/: FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
lab-7/: README.md
lab-7/include/: FaceDetector.hpp
lab-7/src/: FaceDetector.cpp  FrameProcessor.cpp  main.cpp
